# scilab

./: .gitignore  gerrit  groups  project.config  toto.test
scilab/desktop/: Makefile.am  Makefile.in  scilab.xml  scinotes.desktop  xcos.desktop
scilab/desktop/images/: Makefile.in
scilab/desktop/images/icons/: Makefile.in
scilab/libs/MALLOC/: MALLOC.vcproj  MALLOC.vcxproj  Makefile.am  Makefile.in
scilab/libs/MALLOC/includes/: sci_mem_alloc.h  win_mem_alloc.h
scilab/libs/MALLOC/src/: getmaxMALLOC.c  sci_mem_alloc.c  win_mem_alloc.c
scilab/modules/ast/: Makefile.am  Makefile.in  ast.iss  ast.vcxproj  ast.vcxproj.filters  console_Import.def  coverage_Import.def  fileio_Import.def
scilab/modules/ast/data/: mod_style.css  src_style.css
scilab/modules/ast/includes/: allexp.hxx  assignexp.hxx  boolexp.hxx  debugvisitor.hxx  decls.hxx  deserializervisitor.hxx  dummyvisitor.hxx  execvisitor.hxx  expHistory.hxx  functiondec.hxx  listvoid.hxx  mutevisitor.hxx  printvisitor.hxx  returnexp.hxx  run_AssignExp.hxx  run_CallExp.hxx  run_MatrixExp.hxx  run_OpExp.hxx  runvisitor.hxx  scilabexception.hxx  serializervisitor.hxx  shortcutvisitor.hxx  stepvisitor.hxx  timedvisitor.hxx  vardec.hxx  visitor.hxx  visitor_common.hxx
scilab/modules/ast/includes/analysis/: AnalysisVisitor.hxx  Chrono.hxx  ConstantValue.hxx  ConstantVisitor.hxx  DollarInfo.hxx  FBlockEmittedListener.hxx  ForList.hxx  Result.hxx  TIType.hxx  Temporary.hxx  tools.hxx
scilab/modules/ast/includes/ast/: abstractdebugger.hxx  breakpoint.hxx  consoledebugger.hxx  debuggervisitor.hxx  debugmanager.hxx  debugvisitor.hxx  deserializervisitor.hxx  dummyvisitor.hxx  dynlib_ast.h  execvisitor.hxx  expHistory.hxx  macrovarvisitor.hxx  prettyprintvisitor.hxx  printvisitor.hxx  runvisitor.hxx  scilabexception.hxx  serializervisitor.hxx  stepvisitor.hxx  timedvisitor.hxx  treevisitor.hxx  visitor.hxx  visitor_common.hxx
scilab/modules/ast/includes/coverage/: CodePrinterVisitor.hxx  (+6 more)
scilab/modules/ast/locales/: ast.pot  fr_FR.po  ja_JP.po  ru_RU.po  uk_UA.po
scilab/modules/ast/macros/: %r_c_r.sci  %r_f_r.sci  %s_pow.sci  buildmacros.sce
scilab/modules/curl/: Makefile.am  Makefile.in  curl.i  curleasy.i
scilab/modules/curl/sci_gateway/: curl_gateway.xml
scilab/modules/curleasy/: Makefile.am  curleasy_gateway.xml
scilab/modules/double/: Makefile.am  Makefile.in
scilab/modules/double/includes/: double.h
scilab/modules/double/locales/: double.pot
scilab/modules/double/locales_macros/: double-macros.pot
scilab/modules/external_objects/: Makefile.am  Makefile.in  core_Import.def  external_objects.vcxproj
scilab/modules/external_objects/demos/: diazepam.xml
scilab/modules/external_objects/etc/: external_objects.start
scilab/modules/external_objects/includes/: ExternalObjects.h  ExternalObjectsFunction.h  OptionsHelper.hxx  ScilabAbstractEnvironment.hxx  ScilabAbstractEnvironmentException.hxx  ScilabAbstractEnvironmentWrapper.hxx  ScilabAbstractMemoryAllocator.hxx  ScilabAbstractOptionsSetter.hxx  ScilabAutoCleaner.hxx  ScilabEnvironments.hxx  ScilabGateway.hxx  ScilabObjects.hxx  ScilabOptionsSetter.hxx  dynlib_external_objects_scilab.h  gw_external_objects.h  stacktrace.h
scilab/modules/external_objects/locales/: cs_CZ.po  de_DE.po  es_ES.po  external_objects.pot  fr_FR.po  it_IT.po  ja_JP.po  ru_RU.po  uk_UA.po
scilab/modules/external_objects/sci_gateway/: external_objects_gateway.xml
scilab/modules/history_browser/: Makefile.am  Makefile.in  build.xml  history_browser.iss  version.xml
scilab/modules/history_browser/includes/: CommandHistory_Wrap.h  dynlib_history_browser.h
scilab/modules/history_browser/locales/: ca_ES.po  cs_CZ.po  de_DE.po  es_ES.po  fr_FR.po  history_browser.pot  it_IT.po  ja_JP.po  pl_PL.po  pt_BR.po  ru_RU.po  uk_UA.po  zh_CN.po  zh_TW.po
scilab/modules/history_browser/locales_macros/: history_browser-macros.pot
scilab/modules/history_browser/macros/: buildmacros.bat  buildmacros.sce
scilab/modules/interactive_testing/: Makefile.am  Makefile.in  build.xml  interactive_testing.iss  version.xml
scilab/modules/parallel/: Makefile.am  Makefile.in  parallel.iss
scilab/modules/parallel/includes/: ConcurrencyState.hxx  ParallelRunner.hxx  ProcessesRunner.hxx  ProcessesScheduler.hxx  SharedData.hxx  SharedDouble.hxx  ThreadsRunner.hxx  ThreadsScheduler.hxx  concurrency.h  dynlib_parallel.h  parallel_gw.hxx  parallel_utility.hxx
scilab/modules/parallel/locales/: ca_ES.po  cs_CZ.po  de_DE.po  es_ES.po  fr_FR.po  it_IT.po  ja_JP.po  parallel.pot  pl_PL.po  pt_BR.po  ru_RU.po  uk_UA.po  zh_CN.po  zh_TW.po
scilab/modules/parallel/locales_macros/: parallel-macros.pot
scilab/modules/sparse/: Makefile.am  Makefile.in
scilab/modules/sparse/includes/: dynlib_sparse.h  dynlib_sparse_gw.h  gw_sparse.h  sparse_gw.hxx  spmalloc.h
scilab/modules/sparse/locales/: ca_ES.po  cs_CZ.po  de_DE.po  es_ES.po  fr_FR.po  it_IT.po  ja_JP.po  pl_PL.po  pt_BR.po  ru_RU.po  sparse.pot  uk_UA.po  zh_CN.po  zh_TW.po
scilab/modules/sparse/locales_macros/: ca_ES.po  de_DE.po  es_ES.po  fr_FR.po  it_IT.po  ja_JP.po  pl_PL.po  pt_BR.po  ru_RU.po  sparse-macros.pot  uk_UA.po  zh_CN.po  zh_TW.po
scilab/modules/sparse/macros/: %bicg.sci  %bicgstab.sci  %cgs.sci  %pcg.sci  adj2sp.sci  bicg.sci  bicgstab.sci  cg.sci  cgs.sci  conjgrad.sci  gmres.sci  sp2adj.sci  speye.sci  sprand.sci  spzeros.sci
scilab/modules/sparse/sci_gateway/: sparse_gateway.xml
scilab/modules/tclsci/: Makefile.am  Makefile.in  core_Import.def  tclsci.vcproj  tclsci.vcxproj  tclsci.vcxproj.filters
scilab/modules/tclsci/includes/: TCL_Global.h  dynlib_tclsci.h  gw_tclsci.h
scilab/modules/tclsci/locales/: ca_ES.po  cs_CZ.po  de_DE.po  es_ES.po  fr_FR.po  it_IT.po  ja_JP.po  pl_PL.po  pt_BR.po  ru_RU.po  tclsci.pot  uk_UA.po  zh_CN.po  zh_TW.po
scilab/modules/tclsci/locales_macros/: ca_ES.po  de_DE.po  es_ES.po  fr_FR.po  it_IT.po  ja_JP.po  pl_PL.po  pt_BR.po  ru_RU.po  tclsci-macros.pot  uk_UA.po  zh_CN.po  zh_TW.po
scilab/modules/tclsci/macros/: config.sci
scilab/modules/tclsci/sci_gateway/: tclsci_gateway.xml
(+28036 files in other folders)
